tests/miniJava/neg/001285_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new int extends [ 0 ] ; } }
